packages/error/test/helpers/throw-inherited-error.js
import { InheritedError } from './inherited-error';

module.exports = () => {
  throw new InheritedError('message', 'code');
};
